Assure that the thumbnails of directory previews don't exceed the cache size. Thanks to Brendon Higgins for the detailed analyses.

BUG: 203512
CCBUG: 202960

svn path=/trunk/KDE/kdebase/runtime/; revision=1011482